syntax = "proto3";

package dag;

message DagVertexStatus {

    uint32 level = 7;

    // The candidates can be promoted to queen
    bool is_candidate = 8;

    // Queen could decide which node underneath could be accepted or rejected
    bool is_queen_decided = 9;
    bool is_queen = 10;

    int32 status = 11;
}

message DagVertexLink {

    uint64 node_id = 1;
    bytes self_parent_hash = 2;
    bytes peer_parent_hash = 3;
}

message DagVertexConnection {

    repeated uint64 node_id_list = 1;
}
